--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>hello world</h1>
-    <script>
-        console.log("hello");
-    </script>
+   <div id="root"></div>
+   <script type="module" src="./app.js"></script>
+
 </body>
 </html>
