--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
    <div id="root"></div>
-   <script type="module" src="./app.js"></script>
+      <div id="root1"></div>
+
+   <script type="module" src="./src/app.js"></script>
 
 </body>
 </html>
